# meshag

./: .env.example  .gitignore  .pre-commit-config.yaml  CONFIG_README.md  Cargo.toml  DOCKER_SETUP.md  README.md  TRANSPORT_SERVICE_README.md  TWILIO_INTEGRATION.md  WEBSOCKET_MANAGEMENT.md  makefile
.github/workflows/: build-and-release.yml  ci-cd.yml
crates/connectors/: Cargo.toml
crates/connectors/src/: lib.rs  llm.rs  stt.rs  transport.rs  tts.rs
crates/connectors/src/providers/: anthropic.rs  azure.rs  daily.rs  deepgram.rs  elevenlabs.rs  mod.rs  openai.rs  twilio.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: config.rs  lib.rs  pipeline.rs  router.rs  valkey_config.rs
crates/service-common/: Cargo.toml
crates/service-common/src/: handlers.rs  lib.rs  server.rs  types.rs
crates/services/llm/: Cargo.toml
crates/services/llm/src/: lib.rs
crates/services/stt/: Cargo.toml
crates/services/transport/: Cargo.toml
crates/services/tts/: Cargo.toml
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs  queue.rs
docker/: Dockerfile  Dockerfile.base  Dockerfile.llm-service  Dockerfile.stt-service  Dockerfile.transport-service  Dockerfile.tts-service  docker-compose.yml  prometheus.yml
services/common/: interrupt.rs
services/llm-service/: Cargo.toml
services/llm-service/src/: lib.rs  main.rs
services/meshag-service/: Cargo.toml
services/meshag-service/src/: llm.rs  main.rs  stt.rs  transport.rs  tts.rs
services/stt-service/: Cargo.toml
services/stt-service/src/: lib.rs  main.rs
services/stt-whisper/src/: main.rs  processor.rs
services/transport-service/: Cargo.toml
services/transport-service/src/: lib.rs  main.rs
services/tts-service/: Cargo.toml
services/tts-service/src/: lib.rs  main.rs
