[workspace]
members = [
    "crates/shared",
    "crates/service-common",
    "crates/connectors",
    "crates/orchestrator",
    "services/stt-service",
    "services/llm-service",
    "services/tts-service",
    "services/transport-service",
]
resolver = "2"

[workspace.dependencies]
# Common dependencies that will be shared
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros", "ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
async-nats = "0.32"
async-trait = "0.1"
tower-http = { version = "0.5.0", features = ["trace", "cors", "fs"] }
dotenvy = "0.15"
axum-extra = "0.8"
tower = "0.4"
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
dashmap = "5.5"
once_cell = "1.19"
prometheus = "0.13"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_imports = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
