[package]
name = "meshag-connectors"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true, features = ["multipart"] }
chrono = { workspace = true }
meshag-shared = { path = "../shared" }

# Provider-specific dependencies can be added as needed
