[package]
name = "meshag-connectors"
version = "0.1.0"
edition = "2021"

[dependencies]
strum = { workspace = true }
strum_macros = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true, features = ["multipart"] }
chrono = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
url = { workspace = true }
meshag-shared = { path = "../shared" }
http = { workspace = true }

# Provider-specific dependencies can be added as needed
