[package]
name = "meshag-transport-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
meshag-shared = { path = "../../crates/shared" }
meshag-service-common = { path = "../../crates/service-common" }
meshag-orchestrator = { path = "../../crates/orchestrator" }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
meshag-connectors = { path = "../../crates/connectors" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
tokio-tungstenite = { workspace = true }
base64 = "0.21"

# Web framework
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
axum-xml-up = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Time and UUID
chrono = { workspace = true }
uuid = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Environment
dotenvy = { workspace = true }

# Concurrency
dashmap = { workspace = true }
once_cell = { workspace = true }

# Metrics
prometheus = { workspace = true }
