[package]
name = "tts-service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Meshag crates
meshag-shared = { path = "../../crates/shared" }
meshag-connectors = { path = "../../crates/connectors" }
meshag-service-common = { path = "../../crates/service-common" }

# Service-specific dependencies
tracing-subscriber = "0.3"
