[package]
name = "meshag-services-llm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Meshag crates
meshag-shared = { path = "../../shared" }
meshag-connectors = { path = "../../connectors" }
meshag-service-common = { path = "../../service-common" }
