[package]
name = "meshag-services-transport"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
meshag-shared = { path = "../../shared" }
meshag-service-common = { path = "../../service-common" }
meshag-orchestrator = { path = "../../orchestrator" }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
meshag-connectors = { path = "../../connectors" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
tokio-tungstenite = { workspace = true }
base64 = "0.21"

# Web framework
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
axum-xml-up = { workspace = true }
strfmt = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Time and UUID
chrono = { workspace = true }
uuid = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Environment
dotenvy = { workspace = true }

# Concurrency
dashmap = { workspace = true }
once_cell = { workspace = true }

